khoshgelasion show map :) + debug menus and zombies loot